--- a/styles/blog.css
+++ b/styles/blog.css
@@ -47,12 +47,15 @@ li a:hover {
 }
 
 main {
-  text-align: ;
+  /* text-align: center; */
   width: 60%;
   margin: auto;
   padding: 20px;
   border: 1px solid black;
   background-color: white;
+  height:auto;
+  overflow:auto;
+
 }
 
 .class {
@@ -80,4 +83,19 @@ main {
 .best {
   font-size: 20px;
   font-weight: 800;
+}
+
+.left {
+  /* float: left; */
+  height: 450px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+figcaption {
+  text-align: center;
+  margin-top: 20px;
+  background-color: black;
+  color: white;
 }
