--- a/styles/style.css
+++ b/styles/style.css
@@ -59,8 +59,8 @@ main {
 div {
   border: 5px solid black;
   background-color: lightgrey;
-  width:  800px;
-  height: 300px;
+  /* width:  800px;
+  height: 300px; */
   text-align: center;
   margin: 50px 20px 20px;
   /* display: flex; */
@@ -79,4 +79,15 @@ hr {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+
+.inspect {
+  float: left;
+  height: 75px;
+  width: 235px;
+  font-family: Veranda;
+}
+
+.text {
+  float: right;
 }
