--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,200&display=swap');
+
 body {
   background-color: lightgrey;
   font-size: 20px;
   /* font-family: 'Hachi Maru Pop', cursive; */
+  font-family: 'Roboto Mono', monospace;
+
 }
 
 #title {
@@ -13,12 +17,17 @@ body {
   margin: auto;
 }
 
-h1 {
-  /* color: red;
-  font-weight: 800; */
-  /* text-align: center; */
+h2 {
+  font-weight: 100; 
+  text-align: center;
 }
 
+h3 {
+  text-align: center;
+  /* border-bottom: 3px solid red; */
+  /* width: 450px; */
+  /* margin: auto; */
+}
 
 ul {
   list-style-type: none;
@@ -27,6 +36,13 @@ ul {
   overflow: hidden;
   background-color: gray;
 }
+
+hr {
+  color: red;
+  border: 2px solid red;
+  border-radius: 2px;
+}
+
 
 li {
   float: left;
@@ -75,7 +91,7 @@ main {
 }
 
 .syntax2 {
-  margin-top: 20px;
+  /* margin-top: 20px; */
   height: 500px;
   width: auto;
 }
@@ -91,6 +107,19 @@ main {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+ 
+p {
+  background-color: lightgray;
+  opacity: 2;
+  padding: 20px;;
+} 
+
+p:hover {
+  transform: scale(1.02);
+  border: 1px solid;
+  padding: 10px;
+  box-shadow: 2px 5px black;
 }
 
 .important {
