--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,200&display=swap');
+
 body {
   background-color: lightgrey;
-  font-family: 'Hachi Maru Pop', cursive;
+  font-family: 'Roboto Mono', monospace;
 }
 
 #title {
