--- a/styles/blog.css
+++ b/styles/blog.css
@@ -47,7 +47,7 @@ hr {
 }
 
 
-li {
+/* li {
   float: left;
 }
 
@@ -63,7 +63,7 @@ li a {
 li a:hover {
   transform: scale(1.3);
   background-color: red;
-}
+} */
 
 main {
   /* text-align: center; */
@@ -134,4 +134,42 @@ figcaption {
   margin-top: 21px;
   background-color: black;
   color: white;
+}
+
+@media (max-width: 320px) {
+  p {
+     font-size:10px;
+     color: red;
+  }
+}
+
+@media (max-width: 768px) {
+  p {
+    color: black;
+    font-size: 40px;;
+  }
+  p:hover {
+    /* transform: scale(1.3); */
+    background-color: blue;
+  }
+}
+
+@media (max-width: 1200px) {
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 20px 20px;
+    text-decoration: none;
+    background-color: #474350;
+  }
+  
+  li a:hover {
+    transform: scale(1.3);
+    background-color: red;
+  }
 }
